; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_sdgecko_io.c___card_dataresponse.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_sdgecko_io.c___card_dataresponse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_ioResponse = common dso_local global i32** null, align 8
@CARDIO_OP_IOERR_CRC = common dso_local global i64 0, align 8
@CARDIO_OP_IOERR_WRITE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @__card_dataresponse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @__card_dataresponse(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i32**, i32*** @_ioResponse, align 8
  %8 = load i64, i64* %3, align 8
  %9 = getelementptr inbounds i32*, i32** %7, i64 %8
  %10 = load i32*, i32** %9, align 8
  %11 = call i64 @__card_datares(i64 %6, i32* %10)
  store i64 %11, i64* %4, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i64, i64* %4, align 8
  store i64 %14, i64* %2, align 8
  br label %35

15:                                               ; preds = %1
  %16 = load i32**, i32*** @_ioResponse, align 8
  %17 = load i64, i64* %3, align 8
  %18 = getelementptr inbounds i32*, i32** %16, i64 %17
  %19 = load i32*, i32** %18, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @_SHIFTR(i32 %21, i32 1, i32 3)
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = icmp eq i32 %23, 5
  br i1 %24, label %25, label %27

25:                                               ; preds = %15
  %26 = load i64, i64* @CARDIO_OP_IOERR_CRC, align 8
  store i64 %26, i64* %4, align 8
  br label %33

27:                                               ; preds = %15
  %28 = load i32, i32* %5, align 4
  %29 = icmp eq i32 %28, 6
  br i1 %29, label %30, label %32

30:                                               ; preds = %27
  %31 = load i64, i64* @CARDIO_OP_IOERR_WRITE, align 8
  store i64 %31, i64* %4, align 8
  br label %32

32:                                               ; preds = %30, %27
  br label %33

33:                                               ; preds = %32, %25
  %34 = load i64, i64* %4, align 8
  store i64 %34, i64* %2, align 8
  br label %35

35:                                               ; preds = %33, %13
  %36 = load i64, i64* %2, align 8
  ret i64 %36
}

declare dso_local i64 @__card_datares(i64, i32*) #1

declare dso_local i32 @_SHIFTR(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
